trunk/Archive2/a0/a2cc5735401219/output
main.cpp:10:1: error: static_assert failed
static_assert(std::is_const< decltype(b.i) >{});
^             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
