trunk/Archive2/a0/a2cc5735401219/main.cpp
#include <type_traits>

namespace
{

struct A { int i; };

const A b{};
static_assert(std::is_const< decltype(b) >{});
static_assert(std::is_const< decltype(b.i) >{});

}
